--- a/blog/hugo.toml
+++ b/blog/hugo.toml
@@ -22,6 +22,8 @@ googleAnalytics = "" # Enable Google Analytics by entering your tracking id
   mainSections = ["post", "docs"]
 
 [Params.logo]
+  image = "img/placeholder.png"
+  title = "第四纪地层"
   subtitle = "Just soso site" # Logo subtitle
 
 [Params.sidebar]
@@ -34,4 +36,3 @@ googleAnalytics = "" # Enable Google Analytics by entering your tracking id
 [Params.widgets]
   recent_num = 5 # Set the number of articles in the "Recent articles" widget
   tags_counter = false # Enable counter for each tag in "Tags" widget (disabled by default)
-
