--- a/blog/hugo.toml
+++ b/blog/hugo.toml
@@ -36,3 +36,14 @@ googleAnalytics = "" # Enable Google Analytics by entering your tracking id
 [Params.widgets]
   recent_num = 5 # Set the number of articles in the "Recent articles" widget
   tags_counter = false # Enable counter for each tag in "Tags" widget (disabled by default)
+
+[Params.widgets.recent]
+  cached = true
+
+menu: main # Add page to a main menu
+
+# Add page to a main, side, and footer menu
+menu:
+  - main
+  - side
+  - footer
